some basic changes done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmed Ali</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="/IMG/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +19,13 @@
         <img class="top-cloud" src="/IMG/cloud.png" alt="cloud-img">
         <h1>I'm Ahmed.</h1>
         <p class="I"> a <span class="dev">dev</span>eloper.</p>
-        <img class="bottom-cloud" src="/IMG/cloud.png" alt="cloud-img">
-        <img class="mountain" src="/IMG/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="IMG/cloud.png" alt="cloud-img">
+        <img class="mountain" src="IMG/mountain.png" alt="mountain-img">
     </div>
     <div class="container">
         <div class="middle-container">
             <div class="profile">
-                <img src="/Ali.jpg" alt="Image">
+                <img src="Ali.jpg" alt="Image">
                 <h2>Hello.</h2>
                 <p class="intro">I am a student at Aliah University, Kolkata. I'm a programmer and a web developer learner. And I love to eat🤤 chinese foods🤩.</p>
             </div>
@@ -33,17 +33,17 @@
             <div class="skills">
                 <h2>My Skills.</h2>
                 <div class="skill-row">
-                    <img class="skill1" src="/IMG/HTML.jpg" alt="image-skill">
+                    <img class="skill1" src="IMG/HTML.jpg" alt="image-skill">
                     <h3>Web Developing</h3>
                     <p>I started learning web development during COVID-19 lockdown of 2021. There are lots of things still to learn to become a successful developer. And I'm working on it😊.</p>
                 </div>
                 <div class="skill-row">
-                    <img class="skill2" src="/IMG/program.jpg" alt="image-skill1">
+                    <img class="skill2" src="IMG/program.jpg" alt="image-skill1">
                     <h3>Coading</h3>
                     <p>I started learning to code along with web development because without programming language a web page will be incomplete. In order to become a successful developer you should learn the required as well as new skills.</p>
                 </div>
                 <div class="skill-row">
-                    <img class="skill3" src="/IMG/sandwich.jpg" alt="image-skill1">
+                    <img class="skill3" src="IMG/sandwich.jpg" alt="image-skill1">
                     <h3>Hot sandwich challenge</h3>
                     <p>But my best skill is actually in eating hot sandwichs. I'm the undisputed king of hot sandwichs challenge😁. Especially cheese corn sandwich with extra cheese🤤 are my favourite.</p>
                 </div>
@@ -53,7 +53,7 @@
                 <h2>Get In Touch</h2>
                 <h3>If you love web development as much I do.</h3>
                 <p class="Contact-message">Love web development as much as I do? Let's talk about how awesome course is! We can learn while we are free!</p>
-                <a class="btn" href="/HTML Codes/contact.html">CONTACT ME</a>
+                <a class="btn" href="HTML Codes/contact.html">CONTACT ME</a>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
             <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/">Twitter</a>
             <a class="footer-link" href="https://alibhau.github.io/cv/">Website</a>
-            <a class="footer-link" href="/HTML Codes/info.html">Info.</a>
+            <a class="footer-link" href="HTML Codes/info.html">Info.</a>
             <p class="copyright">© 2022 Ahmed Ali @ The Developer</p>
         </div>
 
