some minor changes done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmed Ali</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" href="/IMG/apple-touch-icon.png">
+    <link rel="icon" href="IMG/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Freehand&family=Shrikhand&display=swap"
@@ -16,7 +16,7 @@
 
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/IMG/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="IMG/cloud.png" alt="cloud-img">
         <h1>I'm Ahmed.</h1>
         <p class="I"> a <span class="dev">dev</span>eloper.</p>
         <img class="bottom-cloud" src="IMG/cloud.png" alt="cloud-img">
