--- a/HTML Codes/contact.html
+++ b/HTML Codes/contact.html
@@ -66,6 +66,14 @@ p {
     
     background-color: #30e3cb;
 }
+@media only screen and (max-width:1070){
+  .form-1 input {
+    width: 300px;
+  }
+  .container{
+    width: auto;
+  }
+}
     </style>
 </head>
 
