--- a/HTML Codes/info.html
+++ b/HTML Codes/info.html
@@ -26,6 +26,11 @@ a{
     font-style:normal;
     text-decoration: none;
 }
+  @media only screen and (max-width:740px) {
+            div {
+                margin: 150px 0px;
+            }
+  }
     </style>
 </head>
 <body>
