some basic changes

--- a/HTML Codes/contact.html
+++ b/HTML Codes/contact.html
@@ -66,9 +66,9 @@ p {
     
     background-color: #30e3cb;
 }
-@media only screen and (max-width:1070){
+@media only screen and (max-width:900px){
   .form-1 input {
-    width: 300px;
+    width: 250px;
   }
   .container{
     width: auto;
