some basic changes done

--- a/HTML Codes/contact.html
+++ b/HTML Codes/contact.html
@@ -68,10 +68,15 @@ p {
 }
 @media only screen and (max-width:900px){
   .form-1 input {
-    width: 250px;
+    position: relative;
+    width: 60%;
   }
   .container{
     width: auto;
+  }
+  .container textarea{
+    position: relative;
+    width: 60%;
   }
 }
     </style>
